# gemini_live

./: .gitignore  LEARNING.md  README.md  app_ui.py  main.py  pyproject.toml  utils.py
web/: index.html  script.js  style.css
web_templates/: index.html  script.js  style.css
